# KimaiTray

./: .env.development  .env.production  .env.staging  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  verify.yml
contracts/: ipc-contract.json
scripts/: extract-changelog.mjs  i18n-check.mjs  version-check.mjs
src/: index.css  main.tsx  platform.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: changelog.json  default.json  settings.json  timer-reminder.json
src-tauri/icons/: icon.icns
src-tauri/src/: http.rs  idle.rs  keychain.rs  lib.rs  platform.rs  shortcuts.rs  store.rs  store_persistence.rs  tray.rs
src/api/: activityApi.ts  arrayStore.ts  changelog.test.ts  changelog.ts  changelogWindow.test.ts  changelogWindow.ts  connectionService.ts  connectionTokenStore.test.ts  connectionTokenStore.ts  favoritesStore.ts  hiddenTasksStore.ts  kimaiClient.test.ts  kimaiClient.ts  kimaiTypes.ts  kimaiValidation.test.ts  kimaiValidation.ts  pauseStore.test.ts  pauseStore.ts  platform.ts  projectApi.ts  reminderWindow.test.ts  reminderWindow.ts  safeHttp.test.ts  safeHttp.ts  scopedStore.ts  storeCommands.test.ts  storeMigrations.ts  timesheetApi.ts  trayApi.test.ts  trayApi.ts  updater.test.ts  updater.ts
src/categorymode/: CategoryButton.tsx  CategoryModePanel.tsx  CategoryModeSettingsSection.tsx  CategoryVisual.tsx  categoryConfigStore.ts  categoryLastActivityStore.ts  categoryNormalize.ts  categoryRemoteSource.test.ts  categoryRemoteSource.ts  defaultCategoryConfig.ts  types.ts  useCategoryActivityMapping.ts  useCategoryConfig.ts  useCategoryRemoteSync.ts
src/components/: ActiveTimerCard.test.tsx  ActiveTimerCard.tsx  ApiErrorDialog.tsx  ChangelogDialog.tsx  DailyGoalProgress.test.tsx  DailyGoalProgress.tsx  DateTimePicker.test.ts  DateTimePicker.tsx  DetachedTitleBar.tsx  EmptyTimerState.tsx  ErrorBoundary.tsx  FavoriteTaskItem.tsx  HeaderStatus.tsx  IdleDialog.tsx  NewTaskForm.test.tsx  NewTaskForm.tsx  SearchableSelect.tsx  TagsInput.tsx  TimesheetEditDialog.test.tsx  TimesheetEditDialog.tsx  TodayEntryItem.test.tsx  TodayEntryItem.tsx  TodaySection.tsx  TrayFeedback.tsx  TrayLayoutControls.test.tsx  TrayLayoutControls.tsx  accessibility.test.tsx
src/hooks/: invalidateTimesheets.ts  useActiveTimer.ts  useAppearance.ts  useDeleteTimesheet.ts  useEditTimer.ts  useEditTimesheet.test.tsx  useEditTimesheet.ts  useEntityLookup.ts  useFavorites.ts  useHiddenTasks.ts  useIdleDetection.test.tsx  useIdleDetection.ts  useKimaiClient.test.tsx  useKimaiClient.ts  useKimaiTags.ts  useNoTimerReminder.test.ts  useNoTimerReminder.ts  usePauseTimer.test.tsx  usePauseTimer.ts  usePlatform.ts  useRecentTasks.ts  useStartTask.test.ts  useStartTask.ts  useTodayTimesheets.ts  useUpdater.ts
src/settings/: AboutSection.tsx  AppearanceSection.tsx  ColorPicker.tsx  ConnectionSection.tsx  Controls.tsx  FeaturesSection.tsx  GeneralSection.tsx  IdleDetectionSection.tsx  IntegrationsSection.tsx  SettingsLayout.tsx  ShortcutsSection.tsx  TestSection.tsx  TimerReminderSection.tsx  TrayWindowSection.tsx  icons.tsx  service.test.ts  service.ts  useSettings.test.tsx  useSettings.ts
(+45 files in other folders)
