[package]
name = "kimaitray"
version = "0.16.0"
description = "KimaiTray — Kimai time-tracking tray companion"
authors = ["engazan"]
edition = "2021"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[lib]
name = "kimaitray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }
