[package]
name = "kimaitray"
version = "0.20.0"
description = "KimaiTray — Kimai time-tracking tray companion"
authors = ["engazan"]
edition = "2021"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[lib]
name = "kimaitray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSStatusItem"] }
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "linux")'.dependencies]
# GtkStatusIcon is deprecated upstream, but remains the most compatible tray
# protocol on Cinnamon/Xfce panels where AppIndicator click events are absent.
gtk = "0.18"
gtk-sys = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
glib = "0.18"
libappindicator = "0.9"
libappindicator-sys = "0.9"
